minimumSpawned and maximumSpawned (and properly working min and max wave)