@@ -88,7 +88,7 @@ public class Faction {
         return entityTypes.stream().map(factionEntityType -> new Pair<>(factionEntityType, factionEntityType.getWeight())).toList();
     }
     public List<Pair<FactionEntityType, Integer>> getWeightMapForWave(int wave){
-        return entityTypes.stream().filter(factionEntityType -> factionEntityType.canSpawnInWave(wave) && !factionEntityType.hasRank(MOUNT)).map(factionEntityType -> new Pair<>(factionEntityType, factionEntityType.getWeight())).toList();
+        return entityTypes.stream().filter(factionEntityType -> factionEntityType.getMinimumWave() <= wave && factionEntityType.getMaximumWave() >= wave && !factionEntityType.hasRank(MOUNT)).map(factionEntityType -> new Pair<>(factionEntityType, factionEntityType.getWeight())).collect(Collectors.toList());
     }
     public List<Pair<FactionEntityType, Integer>> getWeightMapForRank(FactionEntityType.FactionRank rank){
         return entityTypes.stream().filter(factionEntityType -> factionEntityType.hasRank(rank)).map(factionEntityType -> new Pair<>(factionEntityType, factionEntityType.getWeight())).toList();
